# alexplainable

./: LICENSE  README.md  prepare.py  pyproject.toml  pyrightconfig.json  ruff.toml
early_results/: ontology  train.py
early_results/example/: flower_head.ckpt  leaf.ckpt  n11939491.ckpt
ontology/: README.md  ontology.py
ontology/result/: initial
ontology/result/n03126707_102/: extracted  extracted.pickle  merged  merged.pickle  merged.prompt  merged_modified  merged_modified.pickle  merged_modified.prompt  modified  modified.pickle  modified.prompt
ontology/result/n03126707_128/: description  description.pickle  extracted  extracted.pickle  extracted.prompt  merged  merged.pickle  merged.prompt  modified  modified.pickle  modified.prompt
ontology/result/n03126707_143/: description  description.pickle  extracted  extracted.pickle  extracted.prompt  merged  merged.pickle  merged.prompt  modified  modified.pickle  modified.prompt
ontology/result/n03126707_216/: description  description.pickle  extracted  extracted.pickle  extracted.prompt  merged  merged.pickle  merged.prompt  modified  modified.pickle  modified.prompt
ontology/result/n03126707_221/: description  description.pickle  extracted  extracted.pickle  extracted.prompt  merged  merged.pickle  merged.prompt  modified  modified.pickle  modified.prompt
ontology/result/n03126707_255/: description  description.pickle  extracted  extracted.pickle  extracted.prompt  (+6 more)
segment/: README.md  create_segment_images.py  create_segment_pickles.py  llava_encapsulate.py  tag_segments.py
train/: README.md  train.py
(+158 files in other folders)
